# kids-pocketmoney

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  docker-compose.prod.yml  docker-compose.yml  docker-start.sh  generate_test_data.py  pyproject.toml  run.py  scheduler.py  setup.py  test_additional.py  test_transactions.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATES/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: __init__.py  app.py  generate_test_data.py  scheduler.py  test_additional.py  test_transactions.py
backend/database/: init_db.py  migrate_db.py
database/: init_db.py  migrate_db.py  schema.sql
frontend/templates/: dashboard.html
scripts/: bump_version.py  clean_dev.sh  community_workflow.py  contribution_tracker.py  pr_template_generator.py  pre_release_checklist.md
templates/: dashboard.html  login.html
